src/App.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body {
  max-width: 100%;
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: 1rem;
  color: #171923;
  

  @media (min-width: 1024px) {
    font-size: 1.1rem;
  }
}



img {
  max-width: 100%;
  display: block;
  margin: 0 auto;
}

.container {
  max-width: 1140px;
  padding: 0 1.2rem;
  margin: 0 auto;
}

.large-container {
  max-width: 1440px;
  padding: 0 1.2rem;
  margin: 0 auto;
}

.team-container,
.board-container {
  max-width: 1140px;
  padding: 0 1.2rem;
  margin: 0 auto;
}

.blog-container {
  max-width: 700px;
  padding: 0 1.2rem;
  margin: 0 auto;
}

h1, 
h2,
h3,
h4,
h5,
h6 {
  font-weight: 900;
}

h1 {
  font-size: 3.2rem;
  margin-bottom: 0.7rem;
  font-weight: bolder;
}

h2 {
  font-size: 2.2rem;
  margin-bottom: 2rem;

  @media (min-width: 1140px) {
    font-size: 2.8rem;
  }
}

.title {
  margin-bottom: 2rem;
  text-align: center;
}

h3 {
  font-size: 1.8rem;
  margin-bottom: 1.5rem;
}

h4 {
  font-size: 1.6rem;
  margin-bottom: 1.5rem;
}

ul {
  padding: 0 1rem;
}

p,
li {
  line-height: 1.8;
  margin-bottom: 1rem;
}

section {
  padding: 2rem 0;
  @media (min-width: 768px) {
    padding-top: 4rem;
    padding-bottom: 4rem;
  }
}

